# pest-cli

./: .gitignore  .ruff.toml  README.md  Taskfile.yml  conftest.py  noxfile.py  pyproject.toml  💲🐀 pest-cli.code-workspace
pest_cli/: app.py
pest_cli/_common/: styles.py  theme.py
pest_cli/_common/components/: component.py  logo.py
pest_cli/_common/fprint/: __init__.py  at.py  bg.py  fg.py  print_echo.py  print_tree.py
pest_cli/cli/: __init__.py  help_formatter.py
pest_cli/cli/commands/generate/: __init__.py  schematic.py  subcommand.py
pest_cli/engine/: schema.py
pest_cli/engine/file/: action.py  file.py  types.py
pest_cli/schematics/application/: schema.yaml
pest_cli/schematics/application/template-[poetry]/{{name}}/: pyproject.toml.jinja
pest_cli/schematics/application/template/{{name}}/: .gitignore.jinja
pest_cli/schematics/application/template/{{name}}/{{name}}/: app_module.py.jinja  main.py.jinja
pest_cli/schematics/application/template/{{name}}/{{name}}/hello/: greeter_service.py.jinja
tests/: test_cli.py  test_generate.py
tools/testing/: plugin.py
wewe/: pyproject.toml
wewe/wewe/: main.py
wewe/wewe/hello/: greeter_service.py  hello_controller.py  module.py
